[tool.poetry]
name = "async-channels"
version = "0.1.0"
description = "Asynchronous event-driven channeling for fun"
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
